<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Money management</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_update_password">Update Password</string>
    <string name="title_activity_gia_ca_thi_truong">Market prices</string>
    <string name="title_activity_home_screen">Home screen</string>
    <string name="title_activity_quanly_chitieu">Money management</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_quan_ly_chi_tieu">QuanLyChiTieu</string>
    <string name="color_press">#4DD0E1</string>
    <string name="color_not_press">#E1F5FE</string>
    <string name="title_activity_quan_tri_admin">Admin management</string>
    <string name="title_activity_thong_tin_giao_dich">Transaction information </string>
    <string name="title_activity_thong_tin_loai_giao_user">Information type of user</string>
    <string name="title_activity_web_browser">VN Express</string>
    <string name="title_activity_de_nghi_chi_tieu">Expense offer</string>
    <string name="title_activity_start__screen">Money management</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="remember_password">Remember password</string>
	<string name="forgot_password">Forgot password</string>
</resources>
