<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#F5F5F5"
    android:padding="10dp">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <TextView 
	        android:gravity="center"
	        android:id="@+id/txtUser"
	        android:layout_width="100dp"
	        android:layout_height="50dp"
	        android:text="@string/username"
	        android:textStyle="bold"
	        android:textColor="#FFFFFF"
	        android:background="#78909C"/>
	    <EditText 
	        android:id="@+id/edtUser"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:hint="@string/username"/>
	</LinearLayout> 
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="10dp">
	    <TextView 
	        android:gravity="center"
	        android:id="@+id/txtPass"
	        android:layout_width="100dp"
	        android:layout_height="50dp"
	        android:text="@string/password"
	        android:textStyle="bold"
	        android:textColor="#FFFFFF"
	        android:background="#78909C"/>
	    <EditText 
	        android:id="@+id/edtPass"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:password="true"
	        android:hint="@string/password"/>
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center"
	    android:layout_marginTop="10dp">
	    <Button 
	        android:id="@+id/btnLogin"
	        android:layout_height="50dp"
	        android:layout_width="100dp"
	        android:textColor="#FFFFFF"
	        android:background="#607D8B"
	        android:layout_marginRight="10dp"
	        android:text="@string/login"/>
	     <Button 
	        android:id="@+id/btnSignup"
	        android:layout_height="50dp"
	        android:layout_width="100dp"
			android:textColor="#FFFFFF"
	        android:background="#607D8B"
	        android:text="@string/signup"/>
	</LinearLayout> 
	
	 <CheckBox 
	        android:id="@+id/rememberPass"
	        android:layout_height="50dp"
	        android:layout_width="wrap_content"
	        android:textSize="16sp"
	        android:textColor="#607D8B"
	        android:textStyle="bold"
	        android:text="@string/remember_password"/>
	 
	 <Button 
	        android:id="@+id/btnforgotPass"
	        android:layout_height="50dp"
	        android:layout_width="188dp"
	        android:textSize="16sp"
	        android:textColor="#FFFFFF"
	        android:background="#607D8B"
	        android:padding="10dp"
	        android:text="@string/forgot_password"/>

</LinearLayout>